--- a/jsnack-2/BONUS/indexB.html
+++ b/jsnack-2/BONUS/indexB.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="scriptB.js"></script>
+    <script src="sriptB.js"></script>
 </body>
 </html>
